...
                        child: PopupMenuButton<String>(
                          onSelected: _sortGearList,
                          itemBuilder:
                              (context) => [
                                PopupMenuItem(
                                  value: 'Name',
                                  child: Text('Sort by Name'),
                                ),
                                PopupMenuItem(
                                  value: 'Type',
                                  child: Text('Sort by Type'),
                                ),
                                PopupMenuItem(
                                  value: 'Maintenance Date',
                                  child: Text('Sort by Maintenance Date'),
                                ),
                              ],
                          icon: Icon(
                            Icons.format_list_bulleted_sharp,
                            color: Colors.black,
                          ),
...
